--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9">
-              <img class="img-responsive logo" src="assets/img/dev-progress-logo.svg" alt="">
+              <img class="img-responsive logo" src="http://mattrothenberg.com/devprogress/assets/img/dev-progress-logo.svg" alt="DevProgress logo">
               <hr>
               <p class="lead callout">We are volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each project we work on focuses on an app, service, data resource, or other technology to advance the cause. We are a team — join us!</p>
               <a target="_blank" href="https://docs.google.com/forms/d/1G-fJ4YlcRqoU03ZL0E8HCqRZCTzNOU2hPOLGE1sO2Sk/viewform?c=0&w=1" class="btn btn-danger btn-material">Get Involved</a>
