Checking in site mirror

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js">
   <head>
@@ -9,8 +8,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <link href="//www.google-analytics.com" rel="dns-prefetch">
-    <link href="//ajax.googleapis.com" rel="dns-prefetch">
+    <link href="http://www.google-analytics.com/" rel="dns-prefetch">
+    <link href="http://ajax.googleapis.com/" rel="dns-prefetch">
     <link href="assets/css/style.min.css" rel="stylesheet">
 
     <script src="assets/components/modernizr.js"></script>
@@ -23,7 +22,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9">
-              <img class="img-responsive logo" src="http://mattrothenberg.com/devprogress/assets/img/dev-progress-logo.svg" alt="DevProgress logo">
+              <img class="img-responsive logo" src="assets/img/dev-progress-logo.svg" alt="">
               <hr>
               <p class="lead callout">We are volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each project we work on focuses on an app, service, data resource, or other technology to advance the cause. We are a team — join us!</p>
               <a target="_blank" href="https://docs.google.com/forms/d/1G-fJ4YlcRqoU03ZL0E8HCqRZCTzNOU2hPOLGE1sO2Sk/viewform?c=0&w=1" class="btn btn-danger btn-material">Get Involved</a>
@@ -45,8 +44,8 @@
               <div class="col-sm-3 social-section">
                 <p class="section-header">Share</p>
                 <ul class="external-links list-unstyled">
-                  <li><a href="#" target="_blank">Facebook</a></li>
-                  <li><a href="#" target="_blank">Twitter</a></li>
+                  <li><a href="index.html#" target="_blank">Facebook</a></li>
+                  <li><a href="index.html#" target="_blank">Twitter</a></li>
                 </ul>
               </div>
             </footer>
@@ -55,7 +54,7 @@
       </section>
     </main>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="assets/components/jquery.js"><\/script>');</script>
     <script src="assets/js/scripts.min.js"></script>
 
