Update title. Add google no index meta.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>FireShell by @toddmotto</title>
+    <title>DevProgress</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-
+    <meta name="robots" content="noindex">
+    
     <link href="http://www.google-analytics.com/" rel="dns-prefetch">
     <link href="http://ajax.googleapis.com/" rel="dns-prefetch">
     <link href="assets/css/style.min.css" rel="stylesheet">
