--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="http://www.google-analytics.com/" rel="dns-prefetch">
     <link href="http://ajax.googleapis.com/" rel="dns-prefetch">
     <link href="assets/css/style.min.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 
     <script src="assets/components/modernizr.js"></script>
 
@@ -30,7 +31,7 @@
       <section class="main-section right">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-sm-12 col-md-10 col-lg-9">
+            <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
               <img class="img-responsive logo" src="assets/img/dev-progress-logo.svg" alt="">
               <hr>
               <p class="lead callout">We are volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each project we work on focuses on an app, service, data resource, or other technology to advance the cause. We are a team — join us!</p>
