--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
 }(document, 'script', 'facebook-jssdk'));</script>
     <main class="main" role="main">
       <section class="main-section left"></section>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
+                <ul>
+                    <li><a target="_blank" href="#ideas">Asks and Ideas</a></li>
+                    <li><a target="_blank" href="#repos">InProgress</a></li>
+                    <li><a target="_blank" href="#coc">Code of Conduct</a></li>
+                    <li><a target="_blank" href="#faq">FAQ</a></li>
+                </ul>
+            </div>
+          </div>
+        </div>
       <section class="main-section right">
         <div class="container-fluid">
           <div class="row">
