--- a/index.html
+++ b/index.html
@@ -28,12 +28,6 @@
 }(document, 'script', 'facebook-jssdk'));</script>
     <main class="main" role="main">
       <section class="main-section left"></section>
-                <ul>
-                    <li><a target="_blank" href="#ideas">Asks and Ideas</a></li>
-                    <li><a target="_blank" href="#repos">InProgress</a></li>
-                    <li><a target="_blank" href="#coc">Code of Conduct</a></li>
-                    <li><a target="_blank" href="#faq">FAQ</a></li>
-                </ul>
       <section class="main-section right">
         <div class="container-fluid">
           <div class="row">
@@ -63,6 +57,15 @@
                   <li><div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Facebook</a></div>
                   <li><div><a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                   </div>
+                </ul>
+              </div>
+              <div class="col-sm-3">
+                  <p class="section-header">Pages</p>
+                  <ul class="external-links list-unstyled">
+                    <li><a target="_blank" href="#ideas">Asks and Ideas</a></li>
+                    <li><a target="_blank" href="#repos">InProgress</a></li>
+                    <li><a target="_blank" href="#coc">Code of Conduct</a></li>
+                    <li><a target="_blank" href="#faq">FAQ</a></li>
                 </ul>
               </div>
             </footer>
