bottom nav experiments. left column content stubs.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,33 @@
             </div>
           </div>
           <div class="row">
+            <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
+              <a id="faq" href="#faq">FAQ</a>
+              <hr>
+              <p class="lead callout">FAQ Text Here</p>
+            </div>
+          <div class="row">
+            <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
+              <a id="ideas" href="#ideas">Asks and Ideas</a>
+              <a target="_blank" href="#">Trello</a>
+              <hr>
+              <p class="lead callout">Describe Trello asks from vision doc</p>
+            </div>
+          <div class="row">
+            <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
+              <a id="projects" href="#projects">InProgress</a>
+              <hr>
+              <p class="lead callout">Maybe use a table to list the projects and their leads?</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
+              <a href="#coc">Code of Conduct</a>
+              <hr>
+              <p class="lead callout">Describe why we used the CoC from 18F, then link to it.</p>
+            </div>
+          </div>
+          <div class="row">
             <footer class="footer">
               <div class="col-sm-6 logo-section">
                 <p class="section-header">Learn More</p>
