content header format fixes

--- a/index.html
+++ b/index.html
@@ -40,29 +40,29 @@
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
-              <a id="faq" href="#faq">FAQ</a>
+              <a class="lead callout" id="faq" href="#faq">FAQ</a>
               <hr>
-              <p class="lead callout">FAQ Text Here</p>
+              <p >FAQ Text Here</p>
             </div>
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
-              <a id="ideas" href="#ideas">Asks and Ideas</a>
+              <a class="lead callout" id="ideas" href="#ideas">Asks and Ideas</a>
               <a target="_blank" href="#">Trello</a>
               <hr>
-              <p class="lead callout">Describe Trello asks from vision doc</p>
+              <p>Describe Trello asks from vision doc</p>
             </div>
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
-              <a id="projects" href="#projects">InProgress</a>
+              <a class="lead callout" id="projects" href="#projects">InProgress</a>
               <hr>
-              <p class="lead callout">Maybe use a table to list the projects and their leads?</p>
+              <p>Maybe use a table to list the projects and their leads?</p>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
-              <a href="#coc">Code of Conduct</a>
+              <a class="lead callout" href="#coc">Code of Conduct</a>
               <hr>
-              <p class="lead callout">Describe why we used the CoC from 18F, then link to it.</p>
+              <p>Describe why we used the CoC from 18F, then link to it.</p>
             </div>
           </div>
           <div class="row">
@@ -88,7 +88,7 @@
               </div>
               <div class="col-sm-3">
                   <p class="section-header">Pages</p>
-                  <ul class="external-links list-unstyled">
+                  <ul class="list-unstyled">
                     <li><a target="_blank" href="#ideas">Asks and Ideas</a></li>
                     <li><a target="_blank" href="#repos">InProgress</a></li>
                     <li><a target="_blank" href="#coc">Code of Conduct</a></li>
