--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               <hr>
               <p >FAQ Text Here</p>
             </div>
+          </div>
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
               <a class="lead callout" id="ideas" href="#ideas">Asks and Ideas</a>
@@ -51,6 +52,7 @@
               <hr>
               <p>Describe Trello asks from vision doc</p>
             </div>
+          </div>
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
               <a class="lead callout" id="projects" href="#projects">InProgress</a>
