remove target="_blank" from bottom pages nav

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
               <div class="col-sm-3">
                   <p class="section-header">Pages</p>
                   <ul class="list-unstyled">
-                    <li><a target="_blank" href="#ideas">Asks and Ideas</a></li>
-                    <li><a target="_blank" href="#repos">InProgress</a></li>
-                    <li><a target="_blank" href="#coc">Code of Conduct</a></li>
-                    <li><a target="_blank" href="#faq">FAQ</a></li>
+                    <li><a href="#ideas">Asks and Ideas</a></li>
+                    <li><a href="#repos">InProgress</a></li>
+                    <li><a href="#coc">Code of Conduct</a></li>
+                    <li><a href="#faq">FAQ</a></li>
                 </ul>
               </div>
             </footer>
