bottom nav id fixes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <p class="section-header">Pages</p>
                   <ul class="list-unstyled">
                     <li><a href="#ideas">Asks and Ideas</a></li>
-                    <li><a href="#repos">InProgress</a></li>
+                    <li><a href="#projects">InProgress</a></li>
                     <li><a href="#coc">Code of Conduct</a></li>
                     <li><a href="#faq">FAQ</a></li>
                 </ul>
