--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
-              <a class="lead callout" href="#coc">Code of Conduct</a>
+              <a class="lead callout" id="cod" href="#coc">Code of Conduct</a>
               <hr>
               <p>Describe why we used the CoC from 18F, then link to it.</p>
             </div>
