--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
               <a class="lead callout" id="faq" href="#faq">FAQ</a>
               <hr>
-              <p >FAQ Text Here</p>
+              <p >FAQ Text Here? Or FAQ link here?</p>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
               <a class="lead callout" id="ideas" href="#ideas">Asks and Ideas</a>
-              <a target="_blank" href="#">Trello</a>
               <hr>
               <p>Describe Trello asks from vision doc</p>
+              <a target="_blank" href="#">Trello</a>
             </div>
           </div>
           <div class="row">
