Put in draft of devprogress website. This is for eval purposes, not for production

--- a/index.html
+++ b/index.html
@@ -40,31 +40,234 @@
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
-              <a class="lead callout" id="faq" href="#faq">FAQ</a>
+              <a class="lead callout" id="faq" href="#faq">Frequently Asked Questions</a>
               <hr>
-              <p >FAQ Text Here? Or FAQ link here?</p>
+              <p>
+              <strong><a id="whatis" href="#whatis">Q:</a> What is DevProgress</strong>
+              </p>
+
+              <p>
+              A: We are a group of volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each project we work on focuses on an app, service, data resource, or other technology to advance the cause.
+              </p>
+
+              <p>
+              <strong><a id="howdoes" href="#howdoes">Q:</a> How does DevProgress work?</strong>
+              </p>
+
+              <p>
+              A: DevProgress is a group of volunteers who work together, and self-organize to work on projects that we feel with help elect more Democratic and progressive candidates. We provide a space for community organizing for our volunteers, for brainstorming, hashing out plans, taking on tasks, and getting stuff done.
+              </p>
+
+              <p>
+              <strong><a id="howinvolve" href="#howinvolve">Q:</a> How do I get involved?</strong>
+              </p>
+
+              <p>
+              A: If you're interested in joining our group of volunteers, first sign up here: <a target="_blank" href="http://hrc.io/tech-volunteer">http://hrc.io/tech-volunteer.</a> Next, you can check out our project ideas here on our <a target="_blank" href="https://trello.com/b/52qk9nGO/devprogress-ideas">Trello board</a>.
+              </p>
+
+              <p>
+              If there's a project you're interested in, vote it up, and add a comment if you like. If you have an idea you'd like to work on with the group, you can add it to the board!
+              </p>
+
+              <p>
+              Once you've filled out the sign-up form, a member of the DevProgress team will reach out and schedule quick intro call to find out a bit more about you and help you find a team and a project to work on..
+              </p>
+
+              <p>
+              <strong><a id="whatsitlike" href="#whatsitlike">Q:</a> What's it like to volunteer with DevProgress?</strong>
+              </p>
+
+              <p>
+              A: We strive to work in the open, work towards consensus, iterate on the work of others, and ship upstream when we can.
+              </p>
+
+              <p>
+              Source code and content you make as a volunteer with DevProgess will be released under an Open Source license, so that other progressive campaigns -- now and in the future -- can build upon the work we do.
+              </p>
+
+              <p>
+              To do the most good, DevProgess must be a safe, inclusive, and positive learning environment for all contributors. To participate, you must agree to abide by our <a target="_blank" href="https://devprogress.github.io/code-of-conduct/">Code of Conduct</a>.
+              </p>
+
+              <p>
+              <strong><a id="howhfa" href="#howhfa">Q:</a> How does DevProgress work with Progressive Campaigns?</strong>
+              </p>
+
+              <p>
+              A: DevProgress is a group of volunteers with some support from Hillary for America, the Democratic National Committee, and other progressive national campaign organizations. We have a community manager who serves as a  liaison between the DevProgress volunteers and the Hillary for America campaign and the DNC. The community manager is be available as a dedicated point of contact to answer questions, provide input and feedback, subject matter expertise, logistical advice, and general support.
+              </p>
+
+              <p>
+              While DevProgress has some support from these organizations, we are building tools to support democratic and progressive candidates up and down the ticket, across the country, now and in the future.
+              </p>
+
+
+              <p>
+              <strong><a id="hfa" href="#hfa">Q:</a>How can the HfA/DNC Upstream in particular help my project?</strong>
+              </p>
+
+              <p>Things HfA or DNC CANNOT Provide:</p>
+
+              <ul>
+                  <li>legal assistance or lawyers</li>
+                  <li>direct engineering assistance</li>
+                  <li>proprietary or non-public personal information</li>
+                  <li>financial assistance</li>
+                  <li>usage of candidate logos or brand identity to your project</li>
+              </ul>
+
+              <p>Things HfA or DNC might be able to provide:</p>
+
+              <ul>
+                  <li>Subject Matter Expertise via the Open Source Community Manager</li>
+                  <li>Advice, opinions, and feedback on Project Demos and Pitches</li>
+                  <li>Promotion and Publicity of DevProgress Organization and projects</li>
+                  <li>A channel of communication with upstream stakeholders in Civic Technology</li>
+                  <li>DevProgress Community Architecture (GitHub Repositories, Slack Channels, Issue Trackers, Public APIs, example anonymized datasets and descriptions of data models, etc.)</li>
+              </ul>
+
+              <p>If you have specific requests, the <a target="_blank" href="mailto:decause@devprogress.us">Open Source Community Manager</a> is the best person to ask.</p>
+
+              <p>
+              <strong><a id="techvol" href="#techvol">Q:</a> I want to volunteer my technical skills, but I don't have an idea for my own project. Can I still help?</strong>
+              </p>
+
+              <p>
+              A: Yes you can! The DevProgress community and some of our partners have been collecting ideas for projects, and we'd love you to help out with them. If you'd like to see the current collection of project ideas, take a look at our <a target="_blank" href="https://trello.com/b/52qk9nGO/devprogress-ideas">ideas Trello board</a>.
+              </p>
+
+              <p>
+              If there's one you'd really like to work on, get in touch with the project lead and let them know, or check out the Github repo and see if there are any open issues you can just jump in and work on.
+              </p>
+
+              <p>
+              <strong><a id="noncode" href="#noncode">Q:</a> I have non-coding skills I would like to volunteer. Does DevProgress help with people like me contribute too?</strong>
+              </p>
+
+              <p>
+              A: We have plenty of opportunities, and plenty of need, for non-coding technical skills. We're looking for content authors, product people, content strategists, artists, illustrators, designers, manual QA testers, project managers, etc. Not to mention, we're a growing volunteer organization, so people interested in helping grow and maintain the community are much appreciated!
+              </p>
+
+              <p>
+              Anyone who has a skill or talent and the time and inclination to use it to help move progressive campaigns forward!
+              </p>
+
+              <p>
+              <strong><a id="joindp" href="#joindp">Q:</a> I already have a project I'm working on that might fit well with DevProgress. Is there a way for my project and team to join DevProgress?</strong>
+              </p>
+
+              <p>
+              A: If your project is Open Source, or you're able and willing to license it with an Open Source license, we'd love to have you and your team join forces with the DevProgress volunteer team. The best way to get started is to sign up here: <a target="_blank" href="http://hrc.io/tech-volunteer">http://hrc.io/tech-volunteer.</a>
+              </p>
+
+              <p>
+              Let us know a little bit about your project and your team, and we can talk about it during your intro call. If DevProgress sounds like a good fit for your project, you can let the other volunteers in DevProgress know about it, and start building up your team.
+              </p>
+
+              <p>
+          <strong><a id="idea" href="#idea">Q:</a> I have an idea! How do I  tell you about it?</strong>
+              </p>
+
+              <p>
+              A: If you have ideas for projects or tools that do not exist yet, then you should add a new card to our <a target="_blank" href="https://trello.com/b/52qk9nGO/devprogress-ideas.">Project Ideas Trello Board</a>, and volunteer as or find a project lead to help get the project started.
+              </p>
+
+              <p>
+          <strong><a id="bugs" href="#bugs">Q:</a> I found a bug. How can I let you know about it?</strong>
+              </p>
+
+              <p>
+          A: If you have specific bugs or issues you want to report on a DevProgress project, you should check our <a target="_blank" href="http://github.com/devprogress">GitHub</a> Organization, locate the upstream project repository, and file the issues there directly.
+              </p>
+
+              <p>
+              <strong><a id="grow" href="#grow">Q:</a> How will DevProgress grow and scale?</strong>
+              </p>
+
+              <p>
+              A: DevProgress is in essence a grassroots group, and will grow to meet the needs of the community. We are following the lead of grassroots organizations around the world and empowering our members to organize their peers, and become leaders. This means that any volunteer can take on whatever role they are most comfortable in and interested in, from code contributor, to UX Designer, from QA tester to project manager. There is a core team of dedicated volunteers who help facilitate the group's work, provide support and structure (and Slack) to the volunteers, and to help hold project leads accountable. We're on a deadline here, after all!
+              </p>
+
+              <p>
+              <strong><a id="benefits" href="#benefits">Q:</a> What are the benefits of joining DevProgress?</strong>
+              </p>
+
+              <p>
+              A: Working with DevProgress will allow you to apply your unique skills to a cause you care about - getting progressive candidates elected, now and down the road. You'll also meet some of the best and most passionate developers, designers, managers, organizers, writers, helpers, and friends. Most of all, you'll know you did all you could to help. 
+              </p>
+
+              <p>
+              <strong><a id="noncitizens" href="#noncitizens">Q:</a> Can people who are not US citizens volunteer with DevProgress?</strong>
+              </p>
+
+              <p>
+              A: Volunteering is a great way to participate if you're not a citizen. If you'd like to volunteer with us, great! Get in touch, and we'll work through the details with you
+              </p>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
               <a class="lead callout" id="ideas" href="#ideas">Asks and Ideas</a>
               <hr>
-              <p>Describe Trello asks from vision doc</p>
-              <a target="_blank" href="#">Trello</a>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
-              <a class="lead callout" id="projects" href="#projects">InProgress</a>
-              <hr>
-              <p>Maybe use a table to list the projects and their leads?</p>
+              <p>
+              We can’t think of everything. In Open Source Communities, one of the best motivators for completing a project is to “scratch your own itch” and work on a problem that is important to you. By sharing the solution, volunteers then solve that problem for everyone else, while distributing the maintenance burden of keeping that solution up to date by expanding it to serve new use-cases.
+              </p>
+
+              <p>
+              The "Volunteer Ladder" is the onboarding path that new contributors go through for intake, vetting, confirmation, inclusion, access, and eventually coordination, and potentially, leadership. The ladder is built is such a way that as volunteer leaders emerge, we are able to scale the process horizontally.
+              </p>
+
+              <p>
+              The "Project Ladder" is what follows after the an individual goes through the volunteer onboarding steps, and would like to propose new projects or initiatives. The <em>Project Proposal Template</em> below provides a common language for describing problems and solutions to break down needs, asks, requirements, restraints, and assign value metrics.
+
+          <p>Answer these questions, and then submit your idea to our <a target="_blank" href="https://trello.com/b/52qk9nGO/devprogress-ideas">Trello Board!</a></p>
+
+              <ol>
+                  <li>Working title</li>
+                  <li>Tagline: a [noun] to help [group of people] do [work/goal]</li>
+                  <li>Example: a mobile app to help new supporters get connected with the campaign and take meaningful independent action</li>
+                  <li>What people do now to accomplish this goal:</li>
+                  <li>The core insight that leads to a different approach/solution:</li>
+                  <li>Why this new thing will be better:</li>
+                  <li>Who will use this?</li>
+                  <li>Who will it help?</li>
+                  <li>How will we know if it's a success?</li>
+                  <li>When does it need to be launched in order to be useful?</li>
+                  <li>Any other known constraints?</li>
+                  <li>Who should we talk to to better understand the problem and current practice?</li>
+              </ol>
+
+
+              </p>
+
+              <p>All of our DevProgress community and campaign projects under active development can be found listed within the <a target="_blank" href="http://github.com/devprogress">DevProgress GitHub Organization</a></p>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer">
               <a class="lead callout" id="coc" href="#coc">Code of Conduct</a>
               <hr>
-              <p>Describe why we used the CoC from 18F, then link to it.</p>
+
+              <p>
+              To do the most good, DevProgess must be a safe, inclusive, and positive learning environment for all contributors. To participate, you must agree to abide by our <a target="_blank" href="https://devprogress.github.io/code-of-conduct/">Code of Conduct</a>.
+              </p>
+
+              <p>
+              Our Code of Conduct was forked from <a target="_blank" href="https://18f.gsa.gov/">18F's</a>, and modified to suit our needs. The reasoning behind this was:
+              </p>
+
+              <ul>
+                  <li>It is one of the best CoC's we've found.</li>
+                  <li>It is an acknowledgement and legitimization of the <strong>good work</strong> in FOSS already being done at 18F</li>
+                  <li>18F did their homework, and we trust them. They looked at all the best CoC's in FOSS and constructed their own that is compatib>e with real civic hacking at the highest levels of government.</li>
+                  <li>"Act as if." Many 18F folks come from the Presidential Innovation Fellowship program at the Whitehouse. Let's follow the White House's lead, because we're going to the White House.</li>
+              </ul>
+
+              <p>
+              The source can be found on our <a target="_blank" href="http://github.com/devprogress/code-of-conduct">GitHub repo</a>.
+              </p>
+
             </div>
           </div>
           <div class="row">
@@ -77,6 +280,9 @@
                   </li>
                   <li>
                     <a href="https://www.democrats.org/" target="_blank"><img class="img-responsive" src="assets/img/dnc-logo.png" alt=""></a>
+                  </li>
+                  <li>
+                    <a href="https://www.github.com/devprogress/" target="_blank"><img class="img-responsive" src="assets/img/GitHub-Mark-64px.png" alt=""></a>
                   </li>
                 </ul>
               </div>
@@ -91,10 +297,9 @@
               <div class="col-sm-3">
                   <p class="section-header">Pages</p>
                   <ul class="list-unstyled">
-                    <li><a href="#ideas">Asks and Ideas</a></li>
-                    <li><a href="#projects">InProgress</a></li>
-                    <li><a href="#coc">Code of Conduct</a></li>
                     <li><a href="#faq">FAQ</a></li>
+                    <li><a href="#ideas">Asks and Ideas</a></li>
+                    <li><a href="#coc">Code of Conduct</a></li>
                 </ul>
               </div>
             </footer>
