--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
               <div class="col-sm-3 social-section">
                 <p class="section-header">Share</p>
                 <ul class="external-links list-unstyled">
-                  <li><div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Facebook</a></div>
+                  <li><div class="fb-share-button" data-href="http://devprogress.us" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fdevprogress.us%2F&amp;src=sdkpreparse">Facebook</a></div>
                   <li><div><a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                   </div>
                 </ul>
