update open graph meta data.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="robots" content="noindex">
 
+    <meta property="og:url" content="http://devprogress.us/" />
+    <meta property="og:title" content="DevProgress" />
+    <meta property="og:description" content="We are volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each project we work on focuses on an app, service, data resource, or other technology to advance the cause. We are a team — join us!" />
+    <meta property="og:image" content="http://devprogress.us/assets/img/dev-progress-logo.svg" />
+
     <link href="http://www.google-analytics.com/" rel="dns-prefetch">
     <link href="http://ajax.googleapis.com/" rel="dns-prefetch">
     <link href="assets/css/style.min.css" rel="stylesheet">
