--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container-fluid">
           <div class="content-section">
             <div class="row">
-              <div class="col-sm-12 col-md-10 col-lg-10 bottombuffer">
+              <div class="col-sm-12 col-md-10 col-lg-10">
                 <img class="img-responsive logo" src="assets/img/dev-progress-logo.svg" alt="">
                 <hr>
                 <p class="lead callout">We are volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each project we work on focuses on an app, service, data resource, or other technology to advance the cause. We are a team — join us!</p>
@@ -254,7 +254,7 @@
           </div>
           <div class="content-section">
             <div class="row">
-              <div class="col-sm-12 col-md-10 col-lg-9 bottombuffer left-align">
+              <div class="col-sm-12 col-md-10 col-lg-9">
                 <a class="lead callout" id="coc" href="#coc">Code of Conduct</a>
                 <hr>
 
