First pass at Gulp Sass workflow.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-   
+
 
     <meta property="og:url" content="http://devprogress.us/" />
     <meta property="og:title" content="DevProgress" />
@@ -16,8 +16,7 @@
 
     <link href="http://www.google-analytics.com/" rel="dns-prefetch">
     <link href="http://ajax.googleapis.com/" rel="dns-prefetch">
-    <link href="assets/css/style.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
 
     <script src="assets/components/modernizr.js"></script>
 
@@ -48,7 +47,7 @@
           <div class="content-section">
             <div class="row">
               <div class="col-sm-12 col-md-10 col-lg-9">
-                <a class="lead callout" id="faq" href="#faq">Frequently Asked Questions</a>
+                <a class="lead" id="faq" href="#faq">Frequently Asked Questions</a>
                 <hr>
                 <p>
                 <strong><a id="whatis" href="#whatis">Q:</a> What is DevProgress</strong>
@@ -242,7 +241,7 @@
           <div class="content-section">
             <div class="row">
               <div class="col-sm-12 col-md-10 col-lg-9">
-                <a class="lead callout" id="ideas" href="#ideas">Asks and Ideas</a>
+                <a class="lead" id="ideas" href="#ideas">Asks and Ideas</a>
                 <hr>
                 <p>
                 We can’t think of everything. In Open Source Communities, one of the best motivators for completing a project is to “scratch your own itch” and work on a problem that is important to you. By sharing the solution, volunteers then solve that problem for everyone else, while distributing the maintenance burden of keeping that solution up to date by expanding it to serve new use-cases.
@@ -260,7 +259,7 @@
           <div class="content-section">
             <div class="row">
               <div class="col-sm-12 col-md-10 col-lg-9">
-                <a class="lead callout" id="coc" href="#coc">Code of Conduct</a>
+                <a class="lead" id="coc" href="#coc">Code of Conduct</a>
                 <hr>
 
                 <p>
@@ -283,41 +282,43 @@
               </div>
             </div>
           </div>
-          <footer class="footer">
-            <div class="row">
-              <div class="col-sm-6 logo-section">
-                <p class="section-header">Learn More</p>
-                <ul class="list-inline">
-                  <li>
-                    <a href="https://www.hillaryclinton.com/" target="_blank"><img class="img-responsive" src="assets/img/hillary-logo.svg" alt=""></a>
-                  </li>
-                  <li>
-                    <a href="https://www.democrats.org/" target="_blank"><img class="img-responsive" src="assets/img/dnc-logo.png" alt=""></a>
-                  </li>
-                  <li>
-                    <a href="https://www.github.com/devprogress/" target="_blank"><img class="img-responsive" src="assets/img/GitHub-Mark-64px.png" alt=""></a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-sm-3 social-section">
-                <p class="section-header">Share</p>
-                <ul class="external-links list-unstyled">
-                  <li><div class="fb-share-button" data-href="http://devprogress.us" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fdevprogress.us%2F&amp;src=sdkpreparse">Facebook</a></div>
-                  <li><div><a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-                  </div>
-                </ul>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-12">
-                  <em>
-                    <small>Paid for by the DEMOCRATIC NATIONAL COMMITTEE (202) 863-8000. This communication is not authorized by any candidate or candidate's committee.</small>
-                  </em>
-              </div>
-            </div>
-          </footer>
         </div>
       </section>
+      <footer class="footer">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-6 logo-section">
+              <p class="section-header">Learn More</p>
+              <ul class="list-inline">
+                <li>
+                  <a href="https://www.hillaryclinton.com/" target="_blank"><img class="img-responsive" src="assets/img/hillary-logo.svg" alt=""></a>
+                </li>
+                <li>
+                  <a href="https://www.democrats.org/" target="_blank"><img class="img-responsive" src="assets/img/dnc-logo.png" alt=""></a>
+                </li>
+                <li>
+                  <a href="https://www.github.com/devprogress/" target="_blank"><img class="img-responsive" src="assets/img/GitHub-Mark-64px.png" alt=""></a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-sm-3 social-section">
+              <p class="section-header">Share</p>
+              <ul class="external-links list-unstyled">
+                <li><div class="fb-share-button" data-href="http://devprogress.us" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fdevprogress.us%2F&amp;src=sdkpreparse">Facebook</a></div>
+                <li><div><a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+                <em>
+                  <small>Paid for by the DEMOCRATIC NATIONAL COMMITTEE (202) 863-8000. This communication is not authorized by any candidate or candidate's committee.</small>
+                </em>
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
